# loan-modelling

./: .env.example  .gitignore  315.ipynb  Dockerfile  dag.py  docker-compose.yaml  images_builder.sh  kaggle.json  pyproject.toml  readme.md
_kubernetes/: commands.txt  dags-pv.yml  dags-pvc.yml  loan_predictor_kubernetes.py  logs-pv.yml  logs-pvc.yml  sc.yml
airflow/dags/: .env.example  loan_predictor.py
data_modifier/: Dockerfile
data_modifier/source/: data_modifier.py  requirements.txt
database_creator/: .env  db_create.py  db_models.py  utils.py
database_creator/source/: db_create.py
dataset_puller/: .env  Dockerfile  data_pulling.py  requirements.txt
dataset_puller/source/: requirements.txt
docker-images/: Dockerfile_data_modifier  Dockerfile_database_creator  Dockerfile_dataset_puller  constants.py  images_builder.sh
docker-images/data_modifier/: Dockerfile  data_modifier.py  utils.py
docker-images/data_modifier/source/: data_modifier.py  utils.py
docker-images/database_creator/: Dockerfile  db_create.py  db_models.py  utils.py
docker-images/database_creator/source/: db_create.py  db_models.py  requirements.txt  utils.py
docker-images/dataset_puller/: Dockerfile  data_pulling.py
docker-images/dataset_puller/source/: data_pulling.py
