[tool.poetry]
name = "aharas-de3-1-5"
version = "0.1.0"
description = ""
authors = ["hvsio <alicjaharaszczuk@gmail.com>"]
readme = "README.md"
packages = [{include = "aharas_de3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
